add yaml secret
